--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,30 @@ body {
 .btnProceso:active{
     background-color: #ff4545;
 }
+
+.btnError {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10%;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    border-radius: 25px;
+    color: #ff4545;
+
+}
+
+.btnErrorTitulo {
+    background-color: #680747;
+    height: auto;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.noClick {
+    pointer-events: none;
+}
